# matchengine_rust

./: .gitignore  Cargo.toml  README.md  config.yaml  design.md
.cursor/rules/: communication-language.mdc
.cursor/skills/matchengine-xctrace-profile/: SKILL.md
benches/: matching_engine.rs
console/: order_book.py  order_detail.py  status.py  summary.py  user_order_pending.py
deploy/: db_market.sh  eth_btc.conf  kafka_market.sh  kafka_settle.sh  table_template.sql
doc/: decimal-precision.md  design.md  http-api.md  publish-performance.md  thread-model.md
examples/: decimal_round_compare.rs
image/: pic.drawio
src/: align_decimal.rs  config.rs  correct_snap.rs  decimal_util.rs  dump.rs  engine.rs  error.rs  httpserver.rs  lib.rs  load.rs  main.rs  mainprocess.rs  market.rs  offer_metrics.rs  payload_encoding.rs  publish.rs  restore.rs  snap_cleanup.rs  task.rs
src/http/: handlers.rs  mod.rs  rest.rs  server.rs
tests/: cancel_order.py  limit_buy.py  limit_sell.py  market_buy.py  market_sell.py  order_generator.py  order_ops.py
web-test/: .gitignore  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
web-test/client/: index.html  vite.config.ts
web-test/client/src/: main.ts  style.css  vite-env.d.ts
web-test/drizzle/: schema.sql
web-test/drizzle/meta/: _journal.json
web-test/src/: config.ts  db.ts  engineClient.ts  index.ts  inputTopicProgress.ts  time.ts
web-test/src/db/: entities.ts  schema.ts
web-test/src/routes/: registerRoutes.ts
web-test/src/services/: feedHub.ts  kafkaWireCodec.ts  offerDispatchService.ts  (+6 more)
(+7 files in other folders)
