[package]
name = "matchengine_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.8"
mysql = "21.0.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
json = "*"
chrono = "*"
skiplist = "*"
rust_decimal = {version = "1.14.3", features = ["maths"]}
nix= "*"
log = "0.4"
pretty_env_logger = "0.4"