[package]
name = "matchengine_rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.10.0"
mysql = "26.0.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
json = "*"
chrono = "*"
skiplist = "0.6.0"
rust_decimal = {version = "1.14.3", features = ["maths"]}
nix= { version = "0.30.1", features = ["process"] }
log = "0.4"
pretty_env_logger = "0.4"
process_lock = "0.1.0"
rdkafka = "0.38.0"
uuid = { version = "*", features = ["v4"] }